# speedtest-app

./: .gitignore  Cargo.toml  README.md  build.rs  dev.lynith.Speedtest.json  meson.build
.flatpak/: cargo.sh  meson.sh  rust-analyzer.sh
.flatpak-builder/cache/refs/heads/x86_64-dev.lynith.Speedtest.json/: init
.flatpak-builder/checksums/: x86_64-dev.lynith.Speedtest.json
.github/workflows/: main.yml
data/: dev.lynith.Speedtest.appdata.xml.in  dev.lynith.Speedtest.desktop.in  dev.lynith.Speedtest.gschema.xml  meson.build
data/icons/: meson.build
src/: lib.rs  main.rs  meson.build  progress_bar.rs  provider.rs  utils.rs  window.rs
src/providers/: mod.rs  speedtest_net.rs
src/resources/: resources.gresource.xml  window.ui
