[package]
name = "speedtest"
version = "0.1.0"
edition = "2021"

[dependencies]
adw = { version = "0.5.2", package = "libadwaita", features = ["v1_3"] }
gtk = { version = "0.7.1", package = "gtk4", features = ["v4_10"] }
async-trait = "0.1.72"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tar = "0.4"
flate2 = "1.0"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
gio = "0.18.1"

[build-dependencies]
glib-build-tools = "0.18.0"
